WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305683
REGRESSION (
297279@main
): P3 colors can be mismatched between painted content, and layer backgrounds (see on book.stevejobsarchive.com).
https://bugs.webkit.org/show_bug.cgi?id=305683
Summary
REGRESSION (297279@main): P3 colors can be mismatched between painted content...
Simon Fraser (smfr)
Reported
2026-01-16 17:46:29 PST
https://book.stevejobsarchive.com
used a display-p3 color in CSS, and this was used both for painted backgrounds, and for "simple container" layers where we set it as layer.backgroundColor. This bug was introduced by
297279@main
, which added clamping of the colors in the painting path to sRGB, but not in the layer backgroundColor path. <
rdar://166725679
>
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-16 17:46:34 PST
<
rdar://problem/168337432
>
Simon Fraser (smfr)
Comment 2
2026-01-16 18:00:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56752
EWS
Comment 3
2026-01-26 19:37:32 PST
Committed
306261@main
(d6203e5d590d): <
https://commits.webkit.org/306261@main
> Reviewed commits have been landed. Closing PR #56752 and removing active labels.
Simon Fraser (smfr)
Comment 4
2026-03-25 19:03:12 PDT
***
Bug 305672
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug