Source/WebKit/UIProcess/mac/WebPageProxyMac.mm
@@ -382,11 +382,6 @@ void WebPageProxy::semanticContextDidChange()
     protect(legacyMainFrameProcess())->send(Messages::WebPage::SemanticContextDidChange(useFormSemanticContext()), webPageIDInMainFrameProcess());
 }
 
-WebCore::DestinationColorSpace WebPageProxy::colorSpace()
-{
-    return protect(pageClient())->colorSpace();
-}
-
 void WebPageProxy::registerUIProcessAccessibilityTokens(WebCore::AccessibilityRemoteToken elementToken, WebCore::AccessibilityRemoteToken windowToken)
 {
     if (!hasRunningProcess())
